# next

./: .gitignore  package-lock.json  package.json  tailwind.config.js
backend/: .env  Dockerfile  README.md  main.py  pyproject.toml  server.py
backend/db/: db.py  user.db
backend/httpx/: httpx_api.py
backend/model/: engine.py  user.py
backend/passlib/: jwt_token.py
backend/routers/: items.py  user.py
backend/utils/: oauth.py
backend/utils/file/: file.py
backend/uv/: main.py
backend/uv/algorithms/blockchain/: diophantine_equation.py
backend/uv/algorithms/data_structures/heap/: heap.py
backend/uv/algorithms/data_structures/tree/: avl_tree.py
docker/: docker-compose.yml
docker/postgres/: docker-compose.yml
docker/postgres/sql/: default.sql
docker/sql/: default.sql
frontend/: .gitignore
src/api/: TableMenuListItem.ts
src/components/sql/: SnippetComponent.tsx
src/components/table/: TableMenu.tsx
src/constants/: table.ts
src/layout/side/: SideMenuList.tsx
src/pages/: _app.tsx  _document.tsx  index.tsx
src/pages/api-request/: index.tsx
src/pages/sql/: index.tsx
src/styles/: globals.css
